Enable preview features in maven compiler plugin to allow usage of Classfile API